static images deleted and flex become blocked.

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
             <button id="inputbtn">Add</button>
         </div>
 
-        <div id="secondInputDiv"></div>
+        <!-- <div id="secondInputDiv"></div> -->
 
     </section>
 
     <section id="showcaseSection">
 
-        <div id="showcaseDiv1"></div>
+        <!-- <div id="showcaseDiv1"></div> -->
 
         <div id="showcaseDiv2">
 
