--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 
     <div id="top13Div">
-        <div id="caption"><h1>TOP  13  OF  THE  CLAN !!!</h1> </div>
+        <!-- <div id="caption"><h1>TOP  13  OF  THE  CLAN !!!</h1> </div> -->
     
         <div id="tableDiv">
             <table id="top13Table" >
