--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <div id="top13Div" >
     <table id="top13Table" > 
-        <caption style="color: white;font-size: 17px; margin-bottom: 2px;"> Top 13 of the clan.</caption>
+        <caption style="color: white;font-size: 16px; margin-bottom: 3px; font-family: cursive;"> Top 13 of the clan!!.</caption>
         <tr>
             <th>Name</th> <th>Points</th> <th>Status</th>
         </tr>
