Few changes in layouts and color, hints about this app is added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div id="container">
     <div id="inputdiv">
         <form action="index.html" id="form">
-            <p>Enter an integer number:</p>
+            <h2> ***Multiplication Table***</h2>
+            <p>Enter a number:</p>
             <input type="number" id="number" class="input">
             <button class="input" id="btn"> Click Here</button>
             <button class = "input" id="refresh">Refresh</button>
